@@ -18,11 +18,15 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|io
+name|apache
 operator|.
-name|IOException
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|TokenStream
 import|;
 end_import
 begin_import
@@ -35,7 +39,9 @@ name|lucene
 operator|.
 name|analysis
 operator|.
-name|TokenStream
+name|pl
+operator|.
+name|PolishAnalyzer
 import|;
 end_import
 begin_import
@@ -80,48 +86,7 @@ name|analysis
 operator|.
 name|util
 operator|.
-name|ResourceLoader
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|analysis
-operator|.
-name|util
-operator|.
-name|ResourceLoaderAware
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|analysis
-operator|.
-name|util
-operator|.
 name|TokenFilterFactory
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|egothor
-operator|.
-name|stemmer
-operator|.
-name|Trie
 import|;
 end_import
 begin_comment
@@ -134,25 +99,7 @@ class|class
 name|StempelPolishStemFilterFactory
 extends|extends
 name|TokenFilterFactory
-implements|implements
-name|ResourceLoaderAware
 block|{
-DECL|field|stemmer
-specifier|private
-name|Trie
-name|stemmer
-init|=
-literal|null
-decl_stmt|;
-DECL|field|STEMTABLE
-specifier|private
-specifier|static
-specifier|final
-name|String
-name|STEMTABLE
-init|=
-literal|"/org/apache/lucene/analysis/pl/stemmer_20000.tbl"
-decl_stmt|;
 DECL|method|create
 specifier|public
 name|TokenStream
@@ -171,36 +118,13 @@ argument_list|,
 operator|new
 name|StempelStemmer
 argument_list|(
-name|stemmer
+name|PolishAnalyzer
+operator|.
+name|getDefaultTable
+argument_list|()
 argument_list|)
 argument_list|)
 return|;
-block|}
-DECL|method|inform
-specifier|public
-name|void
-name|inform
-parameter_list|(
-name|ResourceLoader
-name|loader
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-name|stemmer
-operator|=
-name|StempelStemmer
-operator|.
-name|load
-argument_list|(
-name|loader
-operator|.
-name|openResource
-argument_list|(
-name|STEMTABLE
-argument_list|)
-argument_list|)
-expr_stmt|;
 block|}
 block|}
 end_class
